<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    
    <TextView
        android:id="@+id/error_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_permission"
        android:layout_margin="16dp"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@android:color/black"
        android:contentDescription="@string/error_occured"/>
    
    <Button
        android:id="@+id/error_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grant_permission"
        android:contentDescription="@string/do_some_action"/>

</LinearLayout>